# live-edit

./: .gitignore  README.md  USER_MANUAL.md  USER_MANUAL_EN.md  pyproject.toml
live_edit/: __init__.py  cli.py  config.py  engine.py  preview.py  provider.py  router.py  storage.py  tools.py  vcs.py
live_edit/static/: live-edit.css  live-edit.js
tests/: test_cli.py  test_config.py  test_engine.py  test_provider.py  test_router.py  test_storage.py  test_tools.py  test_vcs.py
