[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live-edit"
version = "0.1.0"
description = "Natural-language-driven live code editing for any web application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
live-edit = "live_edit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["live_edit"]
